[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reloadai"
version = "0.5.0"
description = "REloadAI – Plataforma de engenharia reversa e geração automática de exploits com IA"
authors = [
    { name = "Equipe REloadAI", email = "dev@reloadai.io" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

# Dependências runtime principais
dependencies = [
    "r2pipe>=6.2.0",
    "rich>=13.5.2",
    "openai>=1.14.0",
    "pwntools>=4.11.0",
    "capstone>=5.0.1",
    "keystone-engine>=0.9.2",
    "networkx>=3.2",
    "ssdeep>=3.4 ; platform_system != 'Windows'",   # compila só em *nix
    "tlsh>=4.8.2",
    "pefile>=2023.2.7",
    "flare-capa>=7.0.2",
    "Jinja2>=3.1.3",
    "WeasyPrint>=62.1",
    "python-magic>=0.4.27",
    "markdown>=3.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "black>=24.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6",
    "ruff>=0.3.4",
]

[project.scripts]
reloadai = "reloadai.cli.reloadai_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["reloadai*"]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
